--- a/index.html
+++ b/index.html
@@ -123,7 +123,13 @@
             <div>  <img data-u="image" src="./img/home/04.jpg" />  </div>
             <div>  <img data-u="image" src="./img/home/05.jpg" />  </div>
             <div>  <img data-u="image" src="./img/home/06.jpg" />  </div>
-      
+            <div>  <img data-u="image" src="./img/home/07.jpg" alt="갓바위"/>  </div>
+            <div>  <img data-u="image" src="./img/home/08.jpg" alt="갓바위풍경"/>  </div>
+            <div>  <img data-u="image" src="./img/home/09.jpg" />  </div>
+            <div>  <img data-u="image" src="./img/home/10.jpg" />  </div>
+            <div>  <img data-u="image" src="./img/home/11.jpg" />  </div>
+            <div>  <img data-u="image" src="./img/home/12.jpg" />  </div>
+       <div>  <img data-u="image" src="./img/home/13.jpg" />  </div>
         </div>
 
     <!-- Bullet Navigator -->
