--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>  
   <div style="overflow: hidden;" data-role="header" data-theme="b">
 
-  <h1><a href="index.html" target="_self" data-icon="custom">팔공산</a></h1>
+ <!-- <h1><a href="index.html" target="_self" data-icon="custom">팔공산</a></h1>-->
 
 <div class="nav-glyphish-example" data-role="footer" data-theme="b">
     <div class="nav-glyphish-example" data-role="navbar" data-grid="d">
