--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div>  <img data-u="image" src="./img/home/05.jpg" />  </div>
             <div>  <img data-u="image" src="./img/home/06.jpg" />  </div>
             <div>  <img data-u="image" src="./img/home/07.jpg" alt="갓바위"/>  </div>
-            <div>  <img data-u="image" src="./img/home/08.jpg" alt="갓바위풍경"/>  </div>
+            <div>  <img data-u="image" src="./img/home/08.png" alt="갓바위풍경"/>  </div>
             <div>  <img data-u="image" src="./img/home/09.jpg" />  </div>
             <div>  <img data-u="image" src="./img/home/10.jpg" />  </div>
             <div>  <img data-u="image" src="./img/home/11.jpg" />  </div>
@@ -184,7 +184,7 @@
          <div class="item">   <img src="./img/home/05.jpg" alt=""> <span class="caption"> </span> </div>
          <div class="item">   <img src="./img/home/06.jpg" alt=""> <span class="caption"> </span> </div>
           <div class="item">   <img src="./img/home/07.jpg" alt=""> <span class="caption"> </span> </div>
-         <div class="item">   <img src="./img/home/08.jpg" alt=""> <span class="caption"> </span> </div>
+         <div class="item">   <img src="./img/home/08.png" alt=""> <span class="caption"> </span> </div>
          <div class="item">   <img src="./img/home/09.jpg" alt=""> <span class="caption"> </span> </div>
          <div class="item">   <img src="./img/home/10.jpg" alt=""> <span class="caption"> </span> </div>
          <div class="item">   <img src="./img/home/11.jpg" alt=""> <span class="caption"> </span> </div>
